Opened 9 years ago
Closed 8 years ago
#6796 closed defect (fixed)
ffprobe show_frames ts dvbsubs infinate loop since ffprobe: port to new decode API
| Reported by: | Andy Furniss | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | ffprobe |
| Version: | git-master | Keywords: | deadlock regression |
| Cc: | Marton Balint | Blocked By: | |
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug:
Since -
commit 2a88ebd096f3c748a2d99ed1b60b22879b3c567c
Author: wm4 <nfxjfg@googlemail.com>
Date: Thu Mar 30 16:58:04 2017 +0200
ffprobe: port to new decode API
Not sure if it behaves ideally in presence of decoding errors.
ffprobe on various samples similar to uploaded will soon loop outputting as below.
How to reproduce:
ffprobe -show_frames -i ffprobe-show_frames-dvbsub-inf-loop.ts
ffprobe version N-88204-g7f9de7b Copyright (c) 2007-2017 the FFmpeg developers
built with gcc 5.3.0 (GCC)
configuration: --prefix=/usr --disable-doc --enable-gpl --enable-nonfree --enable-libvpx --enable-libx265 --enable-libx264 --enable-gnutls --enable-libdrm --enable-libfreetype --enable-libfdk-aac
libavutil 56. 0.100 / 56. 0.100
libavcodec 58. 0.101 / 58. 0.101
libavformat 58. 0.101 / 58. 0.101
libavdevice 58. 0.100 / 58. 0.100
libavfilter 7. 0.100 / 7. 0.100
libswscale 5. 0.100 / 5. 0.100
libswresample 3. 0.100 / 3. 0.100
libpostproc 55. 0.100 / 55. 0.100
[h264 @ 0x23313e0] mmco: unref short failure
Last message repeated 1 times
[mpegts @ 0x232cb40] PES packet size mismatch
Last message repeated 1 times
Input #0, mpegts, from '/home/andy/ffprobe-show_frames-dvbsub-inf-loop.ts':
Duration: 00:00:05.68, start: 68053.963267, bitrate: 2713 kb/s
Program 17540
Metadata:
service_name : BBC ONE HD
service_provider:
Stream #0:0[0x19c9]: Video: h264 (High) ([27][0][0][0] / 0x001B), yuv420p(tv, bt709, progressive), 1920x1080 [SAR 1:1 DAR 16:9], 25 fps, 25 tbr, 90k tbn, 50 tbc
Stream #0:1[0x19ca](eng): Audio: aac_latm (LC) ([17][0][0][0] / 0x0011), 48000 Hz, 5.1, fltp
Stream #0:2[0x19ce](eng): Audio: aac_latm (HE-AACv2) ([17][0][0][0] / 0x0011), 48000 Hz, stereo, fltp
Stream #0:3[0x19cd](eng): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006)
<snip> initial output OK but then will loop forever printing
[SUBTITLE]
media_type=subtitle
pts=68057927133
pts_time=68057.927133
format=0
start_display_time=0
end_display_time=30000
num_rects=2
[/SUBTITLE]
[SUBTITLE]
media_type=subtitle
pts=68057927133
pts_time=68057.927133
format=0
start_display_time=0
end_display_time=30000
num_rects=2
[/SUBTITLE]
Attachments (1)
Change History (3)
by , 9 years ago
| Attachment: | ffprobe-show_frames-dvbsub-inf-loop.ts added |
|---|
comment:1 by , 9 years ago
| Keywords: | deadlock regression added |
|---|---|
| Priority: | normal → important |
| Reproduced by developer: | set |
comment:2 by , 8 years ago
| Cc: | added |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
Fixed in 68f5384804fa86af2737f7b08799c9ca2c306db4.
Note:
See TracTickets
for help on using tickets.



.ts to show issue